Updates & Deletion of old files
Updated index.html with description and got rid of legacy text files.

--- a/www/index.html
+++ b/www/index.html
@@ -13,17 +13,24 @@
     <body>
 		<center>
 		<h1>SpiritRox</h1>
-		<div class="mainA">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-		Ut eu velit ut odio tempor pretium iaculis id diam. Donec dui mauris, gravida
-		non facilisis vitae, rutrum vel tortor. Proin eu urna cursus, aliquam est egestas,
-		commodo ligula. Pellentesque pellentesque hendrerit tortor et vehicula. Ut nec
-		magna vel massa auctor hendrerit non a sem. Aenean tincidunt neque ex.
-		Nullam auctor, tellus ut auctor placerat, magna diam suscipit elit, commodo
-		dignissim est mauris sit amet est. Fusce pulvinar mollis risus, non facilisis metus
-		sodales in. Integer orci purus, pharetra sed turpis in, sollicitudin dictum
-		tortor. Nam maximus ullamcorper mollis. Cras maximus ultrices placerat. Donec id
-		fringilla mauris, a congue ligula. Etiam facilisis velit vitae mi elementum
-		imperdiet. Vivamus facilisis arcu consectetur augue aliquet hendrerit.</div>
+		<div class="mainA">SpiritRox aims to mimic the functionality that you
+		may see on any particular ghost hunter or reality-based paranormal show.
+		That is, the functionality of what is called a "Spirit Box." These devices
+		are said to work because entities can "manipulate" electronic devices and
+		select specific words from a dictionary in order to communicate with the living.
+		Whether or not you believe this is up to you...but SpiritRox takes that to the
+		next level by offering the same capabilities on your smartphone or tablet device. 
+		The important thing to remember when using this device is that it operates under
+		the notion that these paranormal entities can indeed manipulate electronic signals
+		in order to communicate.
+		<br><br>
+		You will notice that each word that is "chosen" by the spirit also offers a time-stamp
+		and either the mark of low, medium, or high. These are added values that the spirit can
+		utilize in order to show the strength of this communication. Generally speaking, the "high"
+		category means the signal was in a very strong range and "low" means the opposite.
+		<br><br>
+		This is the initial release, so take it with a grain of salt. Updates are coming! Enjoy!
+		</div>
 		<a href="index2.html"><div class="mainB"><b>BEGIN</b></div></a>
 		</center>
 				
